--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,34 @@
+appnope==0.1.2
+backcall==0.2.0
+decorator==5.0.7
+docutils==0.17
+et-xmlfile==1.0.1
+ipykernel==5.5.3
+ipython==7.22.0
+ipython-genutils==0.2.0
+jedi==0.18.0
+jellyfish==0.6.1
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+lockfile==0.12.2
+luigi==3.0.2
 numpy==1.20.2
-pandas==1.2.3
-py4j==0.10.9
-pyspark==3.1.1
+openpyxl==3.0.7
+pandas==1.2.4
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.18
+ptyprocess==0.7.0
+Pygments==2.8.1
+pysqlite3==0.4.6
+python-daemon==2.3.0
 python-dateutil==2.8.1
 pytz==2021.1
+pyzmq==22.0.3
 six==1.15.0
+tornado==6.1
+traitlets==5.0.5
+us==2.0.2
+wcwidth==0.2.5
+xlrd==2.0.1
